--- a/fabrics/src/styles/navbar.css
+++ b/fabrics/src/styles/navbar.css
@@ -1,76 +1,76 @@
 /* Navbar container */
 .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #6b4f31;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: center;
-    top: 20px;
-    width: 100%;
-    z-index: 1000;
-  }
-  
-  /* Add margin-top to body or main content to avoid overlap */
-  body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .main-content {
-    padding-top: 70px; /* Account for navbar height */
-  }
-  
-  /* Logo section */
-  .navbar-logo {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-logo-image {
-    height: 50px;
-    width: auto;
-  }
-  
-  /* Navigation links */
-  .navbar-links {
-    list-style-type: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .navbar-links li {
-    display: inline;
-  }
-  
-  .navbar-links a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 5px 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .navbar-links a:hover {
-    color: #ffffff;
-    background-color: #b08968;
-  }
-  
-  /* Responsive design */
-  @media (max-width: 768px) {
-    .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #6b4f31;
+  padding: 10px 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 10;
+  width: 98%; 
+  z-index: 1000;
+}
+
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.main-content {
+  padding-top: 40px;
+}
+
+
+.navbar-logo {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-logo-image {
+  height: 80px;
+  width: auto;
+}
+
+.navbar-links {
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links li {
+  display: inline;
+}
+
+.navbar-links a {
+  text-decoration: none;
+  color: #cea27e;
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 5px 5px;
+  border-radius: 5px;
+  background-color: transparent;
+  transition: background-color 0.5s, color 0.5s;
+}
+
+.navbar-links a:hover {
+  color: #ffffff;
+  background-color: #b08968;
+}
+
+@media (max-width: 768px) {
+  .navbar {
       flex-direction: column;
       align-items: flex-start;
-    }
-  
-    .navbar-links {
+  }
+
+  .navbar-links {
       flex-direction: column;
       gap: 10px;
-    }
   }
-  
+}
