--- a/fabrics/src/styles/home.css
+++ b/fabrics/src/styles/home.css
@@ -37,7 +37,7 @@ body {
   
   .container h2 {
     font-size: 1.8rem;
-    color: #6b4f31;
+    color: #0e0d0c;
     margin: 30px 0 10px;
     border-bottom: 2px solid #6b4f31;
     display: inline-block;
